<resources>
    <string name="app_name">App_Taxi</string>
    <string name="tvTituloCon">Crear Conductor</string>
    <string name="etCedulaCon">Cedula Conductor</string>
    <string name="etNombreCon">Nombre Conductor</string>
    <string name="etApellidoCon">Apellido Conductor</string>
    <string name="etTelefonoCon">Telefono Conductor</string>
    <string name="etDireccionCon">Direccion Conductor</string>
    <string name="btnCrearCon">Crear Conductor</string>
    <string name="btnBuscar">Buscar Conductor</string>
    <string name="btnModificarCon">Modificar Conductor</string>
    <string name="btnEliminarCon">Eliminar Conductor</string>
    <string name="tvTitle">Login</string>


    <string name="tvTituloTaxi">Crear Taxi</string>
    <string name="etplacaTaxi">Placa Taxi</string>
    <string name="etmarcaTaxi">Marca Taxi</string>
    <string name="btnCrearTaxi">Crear Taxi</string>

    <string name="tvTituloCompra">Registrar Gasto/Ingresos</string>
    <string name="etgastosCom">Ingresar Gasto</string>
    <string name="etigresoscom">Resgistro Ingreso</string>
    <string name="etutilidadTaxi">Utilidad dia</string>
    <string name="etfechaCom">Fecha (YYYY-MM-DD)</string>
    <string name="etdescripcionCom">Descripcion</string>
    <string name="etcedulaCon">Cedula de Conductor</string>
    <string name="etPlacaTaxi">Placa Taxi</string>
    <string name="btnBuscarTaxi">Buscar Taxi</string>
    <string name="btnRegistrarGi">Resgistrar</string>
    <string name="btnBuscarU">Buscar Registro</string>

    <string name="tvRegistro">Resgistro de Usuario</string>
    <string name="etUsuario">Nombre Usuario</string>
    <string name="etClave">Clave Usuario</string>
    <string name="btnRegistroUs">Registro Usuario</string>
    <string name="etConfClave">Confirmacion Clave</string>
    <string name="btnBuscarUs">Buscar Usuario</string>

    <string name="btnMtaxi">Modulo Taxi</string>
    <string name="btnGastos">Modulo Utilidad</string>
    <string name="btnUsuario">Modulo Usuario</string>
    <string name="btnModificarTaxi">Modificar Taxi</string>
    <string name="btnModificarUsu">Modificar Usuario</string>
    <string name="btnModificarUt">Modificar Usuario</string>
    <string name="btnIngresar">Iniciar Seccion</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="etUsuariInciar">Ingresa el Usuario</string>
    <string name="etClaveIniciar">Ingresa la Contraseña</string>
    <string name="btnMconductor">Modulo Conductor</string>
    <string name="tvMenu">Modulos</string>

    <string name="tvRegistroRecu">Recuperar Contraseña</string>
    <string name="etUsuarioRecu">Usuario Recuperar</string>
    <string name="etConfClaveRecu">Contraseña Nueva</string>
    <string name="etclaveRecu">Confirma Contraseña</string>
    <string name="btnRecuperarUs">Actualizar Contraseña</string>
    <string name="btnOlvidoClave">Olvido Clave</string>
    <string name="btnRegistroNewUsu">Registrase</string>
    <string name="tvRecuperarU">Cambio de contraseña</string>
    <string name="btnRecuperar">Solicitar Cambio</string>
    <string name="etPlacaApi">Solicitar Cambio</string>
    <string name="btnConsultara">Consultar Vehiculo</string>

</resources>